# tg_toot4warder

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: setup.md
systemd-unit/: tg_toot4warder.env  tg_toot4warder.service
tg_toot4warder/: __init__.py  __main__.py  remote_measurement.py
